--- a/src/main/resources/application-production.properties
+++ b/src/main/resources/application-production.properties
@@ -1,7 +1,7 @@
 spring.profiles.active=production
 
 # Data source
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres 
+spring.datasource.url=jdbc:postgresql://cloud-comp-db.cqkrxpiw3bou.eu-west-2.rds.amazonaws.com:5432/postgres
 spring.datasource.username=postgres
-spring.datasource.password=
+spring.datasource.password=postgres
 spring.jpa.hibernate.ddl-auto=create-drop
