--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
 
+archivesBaseName = 'cloud-reverser'
 group = 'se.omegapoint'
 version = '1.0-SNAPSHOT'
 sourceCompatibility = 1.8
@@ -26,6 +27,9 @@ bootRun {
 	systemProperties System.properties
 	addResources = true
 }
+apply plugin: 'java'
+apply plugin: 'maven'
+
 
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter-data-jpa')
@@ -33,3 +37,4 @@ dependencies {
 	runtime('org.postgresql:postgresql')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
+
